# logi_code

./: .gitignore  Cargo.toml  README.md
.github/workflows/: deploy.yml
docs/: README.ja.md  book.toml
docs/design/: evaluator.md  lexer.md  overview.md  parser.md  roadmap.md  utils.md
docs/en/src/: SUMMARY.md  basic_statement.md  basic_syntax.md  command.md  intro.md  sample.md
docs/en/src/samples/: and.md
docs/ja/src/: SUMMARY.md  basic_expression.md  basic_statement.md  basic_syntax.md  command.md  get_start.md  intro.md  sample.md
docs/ja/src/samples/: and.md
docs/src/en/: basic_expression.md  get_start.md
examples/: 2bit_adder.lc  4bit_adder.lc  and.lc  and_with_nand.lc  f_adder.lc  h_adder.lc  xor.lc
src/: evaluator.rs  lexer.rs  lib.rs  main.rs  parser.rs  utils.rs
tests/: evaluator_test.rs
