[package]
name = "logi_code"
version = "1.1.2"
authors = ["Q0tzly"]
edition = "2021"

description = "A scripting language do executing combinational circuits"
repository = "https://github.com/Q0tzly/logi_code"
license = "Apache-2.0"
readme = "README.md"

documentation = "..."
keywords = ["language", "interpreter", "command"]

[dependencies]
termion = "1.5"

[[bin]]
name="logi"
path="src/main.rs"
